--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -35,6 +35,7 @@
                         </div>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="races.html">Races</a></li>
                     <li class="nav-item">
                         <div class="dropdown">
                             <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">More</a>
