--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Constructors
+                            Constructors
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="constructors.html">All Constructors</a></li>
@@ -37,16 +37,17 @@
                         </ul>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="races.html">Races</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          More
+                            More
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="history.html">History </a></li>
                             <li><a class="dropdown-item" href="rules.html">Rules</a></li>
                             <li><a class="dropdown-item" href="legends.html">Legends</a></li>
                         </ul>
-                        </div>
+</div>
                     </li>
                 </ul>
             </div>
