--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -53,15 +53,17 @@
     </nav>
     <div class="filler" style="width:100%;height:50px"></div>
     <!-- Working Area -->
+    <div class="container col-lg-6 form-inline">
+        <form action="">
+            <div class="forme-group input-group rounded">
+                <input class="form-control me-2" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px;" />
+                <button class="btn btn-outline-danger" id="button" style="height: 35px;" type="button">Search</button>
+            </div>
+        </form>
+    </div>
     <div class="container">
         <div class="border-bottom border-danger pt-4 pb-2 mb-3">
             <h2>Drivers List</h2>
-        </div>
-        <div class="search-box">
-            <input class="search-txt" type="text" id="SearchText" onkeyup="myFunction()" placeholder="Search by Name" />
-            <a class="search-btn" href="">
-                <i id="search-btn" class="fa fa-search"></i>
-            </a>
         </div>
         <!-- ko if:records().length > 0 -->
         <p class=" col-4 mr-auto pt-2">
