--- a/Projeto/raceDetails.html
+++ b/Projeto/raceDetails.html
@@ -90,10 +90,10 @@
         </table>
         <!-- /ko-->
         <br />
-        <div class="accordion-flush" id="accordion">
+        <div class="accordion accordion-flush" id="accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                         Results
                     </button>
                 </h2>
