--- a/Projeto/driverdetailsv2.html
+++ b/Projeto/driverdetailsv2.html
@@ -159,52 +159,62 @@
                 </div>
             </div>
         </div>
-        <div>
-            <h1>Races <i class="fa fa-flag-checkered"></i> </h1>
-        </div>
-        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; width: 50%; float: left;">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">CircuitName</th>
-                    <th scope="col">Year</th>
-                    <th scope="col">Name</th>
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody data-bind="foreach: Races">
-                <tr>
-                    <td class="align-middle" data-bind="text:RaceId"></td>
-                    <td class="align-middle" data-bind="text:CircuitName"></td>
-                    <td class="align-middle" data-bind="text:Year"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="text-end">
-                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./raceDetails.html?id=' + RaceId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
-                        <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + RaceId }" title="Selecione para adicionar aos favoritos"></i></button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header bg-dark text-light">
-                    <h5 class="modal-title" id="exampleModalLabel">
-                        <i class="fa fa-spin fa-3x fa-refresh"></i>                                                        Loading data...
-
-                    </h5>
-                </div>
-                <div class="modal-body text-center" style="background-image: url(https://www.gqportugal.pt/media/pages/4472/full_F1.jpg); background-position: center; background-size: cover; height: 100px;">
+        <div class="accordion accordion-flush" id="accordion" style="width: 75%; float:left;">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        Races
+                    </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordion">
+                    <div class="accordion-body">
+                        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; width:75%; float: left;">
+                            <thead class="bg-dark text-light">
+                                <tr>
+                                    <th scope="col">Id</th>
+                                    <th scope="col">CircuitName</th>
+                                    <th scope="col">Year</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col" class="text-right"></th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind="foreach: Races">
+                                <tr>
+                                    <td class="align-middle" data-bind="text:RaceId"></td>
+                                    <td class="align-middle" data-bind="text:CircuitName"></td>
+                                    <td class="align-middle" data-bind="text:Year"></td>
+                                    <td class="align-middle" data-bind="text:Name"></td>
+                                    <td class="text-end">
+                                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./raceDetails.html?id=' + RaceId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
+                                        <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + RaceId }" title="Selecione para adicionar aos favoritos"></i></button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- End of Work Area -->
-    <script src="../Scripts/bootstrap.bundle.min.js"></script>
-    <script src="../Scripts/knockout-3.5.1.js"></script>
-    <script src="../Scripts/jquery-3.6.0.min.js"></script>
-    <script src="driverDetails.js"></script>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header bg-dark text-light">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                            <i class="fa fa-spin fa-3x fa-refresh"></i>                                                        Loading data...
+
+                        </h5>
+                    </div>
+                    <div class="modal-body text-center" style="background-image: url(https://www.gqportugal.pt/media/pages/4472/full_F1.jpg); background-position: center; background-size: cover; height: 100px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End of Work Area -->
+        <script src="../Scripts/bootstrap.bundle.min.js"></script>
+        <script src="../Scripts/knockout-3.5.1.js"></script>
+        <script src="../Scripts/jquery-3.6.0.min.js"></script>
+        <script src="driverDetails.js"></script>
 </body>
 </html>
