--- a/Projeto/driverdetailsv2.html
+++ b/Projeto/driverdetailsv2.html
@@ -159,7 +159,7 @@
                 </div>
             </div>
         </div>
-        <div class="accordion accordion-flush" id="accordion" style="width: 75%; float:left;">
+        <div class="accordion accordion-flush" id="accordion" style="width: 55%; float:left;">
             <div class="accordion-item">
                 <h1 class="accordion-header" id="headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -168,7 +168,7 @@
                 </h1>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordion">
                     <div class="accordion-body">
-                        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; width:75%; float: left;">
+                        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; float: left;">
                             <thead class="bg-dark text-light">
                                 <tr>
                                     <th scope="col">Id</th>
