--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -49,6 +49,15 @@
         </div>
     </nav>
     <div class="filler" style="width:100%;height:50px"></div>
+    <div class="container">
+        <div class="border-bottom pt-4 pb-2 mb-3">
+            <h2>Formula 1 Seasons</h2>
+        </div>
+        <div class = "container">
+            <div style = "text-align:center" style="margin-right:50px;margin-left:50px;">
+                <a href = "#" style = "text-decoration:none"> Previous </a>
+                <a href = "#" style = "text-decoration:none"> Next </a>OLA<div>
+        </div>
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
