--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -53,13 +53,22 @@
         <div class="border-bottom pt-4 pb-2 mb-3">
             <h2>Formula 1 Seasons</h2>
         </div>
-        <div class = "container">
-            <div style = "text-align:center" style="margin-right:50px;margin-left:50px;">
-                <a href = "#" style = "text-decoration:none"> Previous </a>
-                <a href = "#" style = "text-decoration:none"> Next </a>OLA<div>
-        </div>
+        <div class="card center text-center border-dark" style="width: 35rem;height: 35rem;margin-left: auto;
+        margin-right: auto;">
+            <div class="card-body">
+                <div class = "row">
+              <h1 class="card-title">2021</h1>
+              
+              
+            </div>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
+    <script src="seasons.js"></script>
 </body>
 </html>
