--- a/Projeto/constructors.html
+++ b/Projeto/constructors.html
@@ -52,17 +52,25 @@
     </nav>
     <div class="filler" style="width:100%;height:50px"></div>
     <div class="container">
+        <div class="search-box">
+            <input class="search-txt" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px;" />
+            <a class="search-btn" id="button_search" style="height: 35px;" href="" type="button">
+                <i class="fa fa-search"></i>
+            </a>
+        </div>
         <div class="border-bottom pt-4 pb-2 mb-3">
             <h2>Constructors List</h2>
         </div>
         <!-- ko if:records().length > 0 -->
-        <div class="row small">
-            <p class=" col-4 mr-auto pt-2">
-                <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
-                <span data-bind="html: 'Constructors: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
-            </p>
-            <button class="btn-fav btn-outline-success" style="width: 200px;height:30px;">Show Favorites</button> <!-- este botão tá uma real merda, tentar encostar isto à direita -->
-            <div class="col-8 my-0 pt-3">
+        <p class=" col-4 mr-auto pt-2">
+            <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
+            <span data-bind="html: 'Constructors: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
+        </p>
+        <div class="row-cols-3">
+            <div class="row">
+                <button class="btn-fav btn-outline-success" style="width: 200px;height:30px;margin-bottom:5px">Show Favorites</button>
+            </div>
+            <div class="row">
                 <ul class="pagination float-end">
                     <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
                     <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './constructors.html?page=' + '1',  rel:'prev'}">⇤</a></li>
@@ -84,48 +92,48 @@
             </div>
         </div>
 
-        <!-- /ko -->
-        <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Nationality</th>
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody data-bind="foreach: records">
-                <tr>
-                    <td class="align-middle" data-bind="text:ConstructorId"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:Nationality"></td>
-                    <td class="text-end">
-                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./constructorDetails.html?id=' + ConstructorId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
-                        <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + ConstructorId }" title="Selecione para adicionar aos favoritos"></i></button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header bg-dark text-light">
-                    <h5 class="modal-title" id="exampleModalLabel">
-                        <i class="fa fa-spin fa-3x fa-refresh"></i>                                                        Loading data...
+            <!-- /ko -->
+            <table class="table table-striped table-sm small">
+                <thead class="bg-dark text-light">
+                    <tr>
+                        <th scope="col">Id</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Nationality</th>
+                        <th scope="col" class="text-right"></th>
+                    </tr>
+                </thead>
+                <tbody data-bind="foreach: records">
+                    <tr>
+                        <td class="align-middle" data-bind="text:ConstructorId"></td>
+                        <td class="align-middle" data-bind="text:Name"></td>
+                        <td class="align-middle" data-bind="text:Nationality"></td>
+                        <td class="text-end">
+                            <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./constructorDetails.html?id=' + ConstructorId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
+                            <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + ConstructorId }" title="Selecione para adicionar aos favoritos"></i></button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header bg-dark text-light">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                            <i class="fa fa-spin fa-3x fa-refresh"></i>                                                        Loading data...
 
-                    </h5>
-                </div>
-                <div class="modal-body text-center" style="background-image: url(https://www.gqportugal.pt/media/pages/4472/full_F1.jpg); background-position: center; background-size: cover; height: 100px;">
+                        </h5>
+                    </div>
+                    <div class="modal-body text-center" style="background-image: url(https://www.gqportugal.pt/media/pages/4472/full_F1.jpg); background-position: center; background-size: cover; height: 100px;">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <script src="../Scripts/bootstrap.bundle.min.js"></script>
-    <script src="../Scripts/knockout-3.5.1.js"></script>
-    <script src="../Scripts/jquery-3.6.0.min.js"></script>
-    <script src="constructors.js"></script>
+        <script src="../Scripts/bootstrap.bundle.min.js"></script>
+        <script src="../Scripts/knockout-3.5.1.js"></script>
+        <script src="../Scripts/jquery-3.6.0.min.js"></script>
+        <script src="constructors.js"></script>
 
 </body>
 </html>
