--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -54,13 +54,13 @@
     </nav>
     <div class="filler" style="width:100%;height:60px"></div>
     <!-- Working Area -->
-    <div class="container col-lg-6 form-inline">
-            <div class="form-group input-group rounded">
-                <input class="form-control me-2" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px;" />
-                <button class="btn btn-outline-danger" id="button_search" style="height: 35px;" type="button">Search</button>
-            </div>
-    </div>
     <div class="container">
+        <div class="search-box">
+            <input class="search-txt" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px;" />
+            <a class="search-btn" id="button_search" style="height: 35px;" href="#" type="button">
+                <i class="fa fa-search"></i>
+            </a>
+        </div>
         <div class="border-bottom border-danger pt-4 pb-2 mb-3">
             <h2>Drivers List</h2>
         </div>
@@ -93,7 +93,7 @@
                     <!-- /ko -->
                 </ul>
             </div>
-            
+
         </div>
         <!-- /ko -->
         <table class="table table-striped table-sm small" id="myTable">
