--- a/Projeto/constructors.html
+++ b/Projeto/constructors.html
@@ -10,6 +10,7 @@
     <link href="myCSS.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="../Content/themes/base/jquery-ui.css" rel="stylesheet" />
     <meta charset="utf-8" />
 </head>
 <body>
@@ -133,6 +134,7 @@
         <script src="../Scripts/bootstrap.bundle.min.js"></script>
         <script src="../Scripts/knockout-3.5.1.js"></script>
         <script src="../Scripts/jquery-3.6.0.min.js"></script>
+        <script src="../Scripts/jquery-ui-1.13.0.js"></script>
         <script src="constructors.js"></script>
 
 </body>
