--- a/Teste de tretas/teste.html
+++ b/Teste de tretas/teste.html
@@ -14,13 +14,12 @@
 </head>
 
 <body>
-    <div class="container col-lg-6 form-inline">
-        <form action="">
-            <div class="form-group input-group rounded">
-                <input class="form-control me-2" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px;" />
-                <button class="btn btn-outline-danger" id="button_search" style="height: 35px;" type="button">Search</button>
-            </div>
-        </form>
+    <div data-bind="foreach: grouped" >
+        <div data-bind="foreach: $data" class="row">
+            <div class="column" data-bind="text: text"></div>
+        </div>
+    </div>    
+    
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
