--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -84,7 +84,7 @@
               </nav>
               
         </div>
-        <div class="card-text card-sm-12" style = "text-align:center">
+        <div class="card-text card-sm-12" style = "text-align:left;margin-left:15px">
             <div class="row">
                 <div class="col-sm-3">
                     <h6 class="mb-0">Drivers</h6>
@@ -119,13 +119,13 @@
             <hr>
             <div class="row">
                 <div class="col-sm-3">
-                    <h6 class="mb-0">Winner</h6>
+                    <h6 class="mb-0">Champion</h6>
                 </div>
                 <div class="col-sm-9 text-secondary" data-bind="text: Winner">
                 </div>
             </div>
             <hr>
-            <h5 data-bind="text: Url"></h1>
+            <h5><a data-bind="attr: { href: Url }">Wikipedia URL</a> </h5>
         </p>
         <a href="#" class="card-link">Card link</a>
         <a href="#" class="card-link">Another link</a>
