--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -82,6 +82,7 @@
                                 <li><a class="dropdown-item" href='history.html'>History</a></li>
                                 <li><a class="dropdown-item" href="legends.html">Legends</a></li>
                                 <li><a class="dropdown-item" href="rules.html">Rules</a></li>
+                                <li><a class="dropdown-item" href="tickets.html">Buy Tickets</a></li>
                             </ul>
                         </div>
                     </li>
