--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -111,7 +111,40 @@
             </div>
         </div>
     </div>
-    <div class="filler" style="width:100%;height:200px"></div>
+    <div class="container">
+        <div class="col-md-12 col-lg-12 col-sm-12" style="width:100%;">
+            <div class="zoom" style="margin:20px;">
+                <img class="card-img-top" src="https://cdn-1.motorsport.com/images/mgl/Y99yDpLY/s8/2022-f1-car-1.jpg" style="width: 30%; height: 300px; border: 2px solid;border-radius:6px; float:left;" alt="Circuit Image">
+                <div class="card-body" style="width: 100%; height: 300px;">
+                    <h5 class="card-title">News</h5>
+                    <p class="card-title">Hello</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-12 col-lg-12 col-sm-12" style="width:100%;">
+            <div class="zoom" style="margin:20px;">
+                <img class="card-img-top" src="https://cdn-1.motorsport.com/images/mgl/Y99yDpLY/s8/2022-f1-car-1.jpg" style="width: 30%; height: 300px; border: 2px solid;border-radius:6px; float:left; margin: 10px;" alt="Circuit Image">
+                <div class="card-body" style="width: 100%; height: 300px; margin: 10px;">
+                    <h2 class="card-title" style="text-align: left;">
+                        The New Formula 1 Car
+                    </h2>
+                    <p class="card-title" style="text-align: left;">
+                        The countdown to Formula 1’s new era car launches is underway, as teams put the final touches to their 2022 challengers.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-12 col-lg-12 col-sm-12" style="width:100%;">
+            <div class="zoom" style="margin:20px;">
+                <img class="card-img-top" src="https://cdn-1.motorsport.com/images/mgl/Y99yDpLY/s8/2022-f1-car-1.jpg" style="width: 30%; height: 300px; border: 2px solid;border-radius:6px; float:left;" alt="Circuit Image">
+                <div class="card-body" style="width: 100%; height: 300px;">
+                    <h5 class="card-title">News</h5>
+                    <p class="card-title">Hello</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="filler" style="width:100%;height:300px"></div>
     <nav class="navbar navbar-dark bg-dark fixed-bottom">
         <div class="container small">
             <div class="navbar-text">&copy;  Introdução as Tecnologias Web - 2021/22</div>
