--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -40,6 +40,7 @@
     <div class="container">
         <div class="border-bottom pt-4 pb-2 mb-3">
             <h2>Formula 1 Seasons</h2>
+            <h6 class ="text-dark"> Check out all the information about all the Formula 1 Seasons since 1950!</h6>
         </div>
         <div class="row">
             <div class="col-sm-6 col-md-6 col-lg-6">
@@ -186,7 +187,7 @@
                 </table>
             </div>
         </div>
-        <div class="filler" style="width:100%;height:500px"></div>
+        <div class="filler" style="width:100%;height:100px"></div>
         <nav class="navbar navbar-dark bg-dark fixed-bottom">
             <div class="container small">
                 <div class="navbar-text">&copy;  Introdução as Tecnologias Web - 2021/22</div>
